# strata-template

./: .catalog.yml  .drone.yml  .gitignore  Dockerfile  Makefile  README.md  app.py  buildspec-cdk-deploy.yml  buildspec-cdk-diff.yml  cdk.json  local_config.yml  package-lock.json  package.json  pyproject.toml  replicate.sh  requirements-dev.txt  requirements.txt  setup.py  stratum.py
.github/workflows/: main.yaml
data_platform_access/constructs/: cloudwatch_consumer_role_construct.py
data_platform_access/stacks/: cloudwatch_access_stack.py
template/constructs/: template_construct.py
template/lambdas/template-lambda/: main.py
template/stacks/: template_stack.py
