[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replace-me-strata-name"
version = "1.0.0"
readme = "README.md"
description="replace-me-strata-description"
requires-python=">=3.11.0"
dependencies = [
    "aws-cdk-lib==2.80.0",
    "constructs>=10.0.0,<11.0.0",
    "boto3>=1.28.3",
    "StrataCore>=4.0.1"
]

[[project.authors]]
name = "your-squad"
email = "your-squad@skyscanner.net"

[project.optional-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=3.3",
    "pytest>=7.2.2",
    "pytest-snapshot>=0.9.0",
    "Flake8-pyproject>=1.2.3",
]

[tool.pep8]
max-line-length = "120"

[tool.autopep8]
max-line-length = "120"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, E231, E501, IF100, I001, T003"
import-order-style = "isort"
application-import-names = "replace-me,tests"
